--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "author": "Emilio Castro <hello@emicastro.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "nanoid": "^3.1.10",
+    "swagger-ui-express": "^4.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
