--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Emilio Castro <hello@emicastro.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.10",
     "swagger-ui-express": "^4.1.4"
   },
